<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/signup"
        tools:context=".activity.auth.Signup">

        <RelativeLayout
            android:id="@+id/rl"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/Sign"
                android:textColor="@color/white"
                android:textSize="@dimen/value_20sp" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl"
        android:layout_marginTop="@dimen/value_30dp"
        android:layout_marginLeft="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_20dp"
        >

        <LinearLayout
            android:id="@+id/li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_30dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:background="@drawable/board"
            tools:ignore="UselessParent">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_com"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/li1"
            android:layout_below="@+id/li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:background="@drawable/board"
            tools:ignore="UselessParent">
            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown" />

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/li1"
            android:id="@+id/user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_20dp">

            <EditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_marginTop="@dimen/value_20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="@dimen/value_20dp"
            android:layout_marginTop="@dimen/value_30dp"
            android:layout_marginRight="@dimen/value_20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="@dimen/value_20sp" />

    </RelativeLayout>

    </RelativeLayout>
</layout>